               curve errors for rare combinations of signal and
               background integreation limits,

             • provide a name for the output data frame ‘LxTx.table’
               for the ‘RLum.Results’ object,

             • error fixed for the marginal case that k = 2 and exceed
               the maximal curve length. In that case accidentially no
               error was calculated.

         • ‘calc_TLLxTxRatio()’:

             • Lx/Tx ratio wrongly calculated as due to a coding error
               just the first value of the signal integral was taken
               for summing up the values and not the range of the
               values,

             • Output produced by the function now is a ‘list’ (data
               slot in the RLum object), to equal behavoir of the
               functions.

         • ‘fit_CWCurve()’:

             • Implement ‘...’ argument to replace explicit arguments
               ‘ylab’, ‘xlab’ and ‘main’,

             • Fix an issue that causes an error when input values were
               <= 0 (#123 reported by Johanna Lomax),

             • Correct wrong y-axis labelling (wrong channel resolution
               value).

         • ‘plot_AbanicoPlot()’:

             • numeric values allowed for parameter centrality,

             • KDE label value fixed,

             • layout functionality added,

             • not supported summary keywords fixed,

             • dispersion polygon bug fixed,

             • dispersion type enriched by userdefined confidence
               interval,

             • rug option added,

             • multiple 2-sigma-bars allowed,

             • rotate-Option added to Abanico Plot,

             • minor modifications of layout definitions.

         • ‘plot_DRTResults()’:

             • Argument ‘na.exclude’ renamed to ‘na.rm’,

             • by default ylim scaling now is set to the minimum and
               maximum extend of the data set,
